[tool.black]
line-length = 240

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "diffusion-cam"
version = "0.1.0"
description = "Diffusion-CAM: model-agnostic contrastive gradient CAM and TAM-style post-processing (optional VLM example)."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
]

[project.optional-dependencies]
standalone = [
    "shortuuid",
    "httpx==0.24.0",
    "einops",
    "ftfy",
]

train = [
    "shortuuid",
    "httpx==0.24.0",
    "einops",
    "ftfy",
    "numpy==1.26.2",
    "open_clip_torch",
    "fastapi",
    "markdown2[all]",
    "numpy",
    "requests",
    "sentencepiece",
    "torch==2.6.0",
    "torchvision==0.21.0",
    "uvicorn",
    "wandb",
    "deepspeed==0.16.4",
    "peft==0.4.0",
    "accelerate==1.6.0",
    "tokenizers==0.21.1",
    "transformers==4.50.3",
    "bitsandbytes==0.45.3",
    "sentencepiece~=0.1.99",
    "einops==0.6.1",
    "einops-exts==0.0.4",
    "gradio_client==0.2.9",
    "urllib3<=2.0.0",
    "datasets==2.16.1",
    "pydantic==2.10.6",
    "timm",
    "hf_transfer",
    "opencv-python",
    "av",
    "decord",
    "tyro",
    "scipy",
]

[project.urls]
"Homepage" = "https://github.com/ZzzzzZhhmm/Diffusion-CAM"

[tool.setuptools.packages.find]
where = ["method", "third_party"]
include = ["diffusion_cam*", "llava*"]
exclude = [
    "assets*",
    "benchmark*",
    "docs",
    "dist*",
    "playground*",
    "scripts*",
    "tests*",
    "checkpoints*",
    "project_checkpoints*",
    "debug_checkpoints*",
    "mlx_configs*",
    "wandb*",
    "notebooks*",
]

[tool.wheel]
exclude = [
    "assets*",
    "benchmark*",
    "docs",
    "dist*",
    "playground*",
    "scripts*",
    "tests*",
    "checkpoints*",
    "project_checkpoints*",
    "debug_checkpoints*",
    "mlx_configs*",
    "wandb*",
    "notebooks*",
]
